--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -46,7 +46,7 @@
 										{% for category in site.category_list %}
 											{% if category.title contains "Setup & Installation" %}
 											{% else %}
-												<div class="section-top section-top-category" {% if category.title == 'Front End Support' %}id="bottom-section"{% endif %}>
+												<div class="section-top section-top-category" {% if category.title == 'User Interface' %}id="bottom-section"{% endif %}>
 													<div class="container">
 															<div class="header">
 																{{ category.title}}
@@ -58,7 +58,7 @@
 																{% for item in category.subs %}
 																	<div class="col-xs-12 col-sm-6 col-lg-4">
 																		<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="dev-guide-item">
-																			<img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.icon }}" class="dev-guide-icon" {% if category.title == 'Front End Support' %}id='{{ item.id }}-logo'{% endif %} /> 
+																			<img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.icon }}" class="dev-guide-icon" /> 
 																			<div class="dev-guide-content" data-mh>
 																				<div class="dev-guide-title" >
 																					{{ item.title }}
