--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -29,7 +29,7 @@
 								</div><!-- /.row -->
 								<div>
                                     <!-- <a href="cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a> -->
-                                    <!-- <a href="cli_home">
+                                    <!-- <a href="toolchain">
                                         <div id="learn-more-about-cli-box">
                                             <p class="learn-more-link">Learn more about the CLI</p>
                                             <img class="down-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
