--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -99,7 +99,7 @@
 					</div> -->
 				</div>
 				<!-- <div>
-					<a href="media/cli_home"><button class="btn" id="top-section-btn">Get Started</button></a>
+					<a href="media/toolchain"><button class="btn" id="top-section-btn">Get Started</button></a>
 				</div> -->
 				<div class="row">
 					<div class="marketing-grid">
@@ -239,7 +239,7 @@
 					<div class="row">
 						<div class="marketing-content">
 							<p class="subheader inline">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
-							<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/cli_home">
+							<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/toolchain">
 								<p class="learn-more-link">Learn more</p>
 								<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 							</a>
