--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -27,6 +27,19 @@
 
 				<div class="row">
 					<div class="col-md-4 col-md-offset-1 dev-guide-container">
+						{% if page.url contains 'tutorials' %}
+						<div class="sections-list-wrapper">
+							<div class="sections-list js-affix js-scrollspy">
+								<div class="dev-guide"> 
+									<div class="left-nav-section" id="{{ category.category }}">
+										<div class="feature-list">
+											<div class='in-this-page js-sections'></div>
+										</div>
+									</div>
+								</div>						
+							</div><!-- /.sections-list -->
+						</div>
+						{% else %}
 						<div class="version-section">
 							<p>Version</p>
 							<div class="version-selector">
@@ -67,6 +80,7 @@
 								</div>						
 							</div><!-- /.sections-list -->
 						</div>
+						{% endif %}
 					</div><!-- /.col -->
 						<div class="col-md-8 section-top docs-container">
 							{% if page.url contains 'get_started_docs' %}
