--- a/docs/amplify-theme/_layouts/ui_library.html
+++ b/docs/amplify-theme/_layouts/ui_library.html
@@ -16,7 +16,7 @@
 							</div><!-- /.align-inner -->
 						</div><!-- /.align-container -->
 					</div><!-- /.col -->
-					<img id="half-chatbot" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Chat@1x.png">
+					<img id="half-chatbot" class="hidden-xs" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Chat@1x.png">
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 			</div><!-- /.hero-subheader -->
@@ -48,7 +48,7 @@
 					</div><!-- /.col -->
 					<div class="col-md-4 col-md-offset-1 dev-guide-container styleguide-nav">
 						<div class="sections-list-wrapper">
-							<div class="sections-list js-affix js-scrollspy hidden-xs">
+							<div class="sections-list js-affix js-scrollspy">
 								<div class="dev-guide"> 
 									{% if site.styleguide %}
 										<div class="left-nav-section">
