--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -206,7 +206,7 @@
 											{% endfor %}
 										</div>
 										<div class="cloud-grid-content" data-mh>
-											<img class="grid-icon" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Misc/Gear-Icon.svg">
+											<img class="grid-icon" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Misc/Gear.svg">
 											<div class="cloud-grid-text">
 												<h2 class="cloud-grid__title">{{ item.title }}</h2>
 												<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
