--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -1843,6 +1843,10 @@ li {
             font-size: 16px;
             line-height: 24px;
         }
+
+        select:focus {
+            outline: none;
+        }
     }
 }
 
