--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -55,8 +55,8 @@
                                 </div>
                             </div>
                             <div>
-                                <a href="https://buildon.aws/?sc_channel=ba&sc_campaign=build_on_aws&sc_publisher=direct&trk=ba_buildonaws_direct" target="_blank"> 
-                                    <button class="btn" id="aws-signup-btn">Create AWS Account</button> 
+                                <a href="https://portal.aws.amazon.com/billing/signup?redirect_url=https%3A%2F%2Faws.amazon.com%2Fregistration-confirmation#/start" target="_blank"> 
+                                    <button class="btn" id="aws-signup-btn">Create an AWS Account</button> 
                                 </a>
                             </div>
                             <img id="aws-logo" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/aws_logo.png" />
@@ -75,7 +75,7 @@
                                     Install the CLI
                                 </div>
                                 <div class="subheader col-sm-10">
-                                    Use the CLI to enable cloud services and integrate the into your apps. The CLI works with apps built using the AWS Amplify Library (Web, React, and React Native) and the AWS Mobile SDK (iOS, Android, Xamarin).
+                                    The Amplify Command Line Interface (CLI) is a unified toolchain to manage and create your AWS Cloud services. Use the CLI to enable cloud services and integrate the into your apps.
                                 </div>
                             </div>
                             <div class="row">
