--- a/docs/amplify-theme/_layouts/tutorials.html
+++ b/docs/amplify-theme/_layouts/tutorials.html
@@ -38,7 +38,7 @@
 									<div class="nav-grid nav-grid--out nav-grid-tutorials">
 										{% for category in page.tutorial_list %}
 
-										<div class="section-top section-top-category" {% if category.title == 'Front End Support' %}id="bottom-section"{% endif %}>
+										<div class="section-top section-top-category" {% if category.title == 'AWS Amplify Cloud Features' %}id="bottom-section"{% endif %}>
 											<div class="container">
 													<div class="header">
 														{{ category.title}}
