--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -2484,7 +2484,7 @@ li {
 
     h2 {
         color: #232F3E !important;
-        font-family: "Amazon Ember" !important;
+        font-family: "Amazon Ember", "Helvetica", sans-serif !important;
         font-size: 42px !important;	
         font-weight: 300 !important;	
         line-height: 53px !important;
@@ -2496,7 +2496,7 @@ li {
 
     h3 {
         color: #232F3E !important;
-        font-family: "Amazon Ember" !important;
+        font-family: "Amazon Ember", "Helvetica", sans-serif !important;
         font-size: 21px !important;
         font-weight: bold !important;
         line-height: 26px !important;
@@ -2702,7 +2702,7 @@ li {
     li {
         .style-category {
             color: #828282 !important;
-            font-family: "Amazon Ember" !important;
+            font-family: "Amazon Ember", "Helvetica", sans-serif !important;
             font-size: 28px !important;
             font-weight: 300 !important;
             line-height: 35px !important;
