--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -75,7 +75,7 @@
                                     Install the CLI
                                 </div>
                                 <div class="subheader col-sm-10">
-                                    The Amplify Command Line Interface (CLI) is a unified toolchain to manage and create your AWS Cloud services. Use the CLI to enable cloud services and integrate the into your apps.
+                                    The Amplify Command Line Interface (CLI) is a unified toolchain to manage and create your AWS Cloud services. Use the CLI to enable cloud services and integrate them into your apps.
                                 </div>
                             </div>
                             <div class="row">
