--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -66,7 +66,7 @@
 										{{ item.item_name }}
 									</a>
 								{% else %}
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.item_url }}">
+									<a id="{{ item.id }}" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.item_url }}">
 										{% if item.item_icon %}<i class="icon icon--{{ item.item_icon  }}"></i>{% endif %}
 										{{ item.item_name }}
 									</a>
@@ -85,6 +85,26 @@
 		</div><!-- /.container -->
 	</header><!-- /.site-header -->
 {% endif %}
+<script>
+	{% if page.url contains 'get_started' %}
+		document.getElementById('get_started').style.borderBottom = "2px solid #FF9900";
+	{% endif %}
+	{% if page.url contains 'developer_guide' %}
+		document.getElementById('guides').style.borderBottom = "2px solid #FF9900";
+	{% endif %}
+	{% if page.url contains 'tutorials' %}
+		document.getElementById('tutorials').style.borderBottom = "2px solid #FF9900";
+	{% endif %}
+	{% if page.url contains 'toolchain' %}
+		document.getElementById('toolchain').style.borderBottom = "2px solid #FF9900";
+	{% endif %}
+	{% if page.url contains 'ui_library' %}
+		document.getElementById('ui_library').style.borderBottom = "2px solid #FF9900";
+	{% endif %}
+	{% if page.url contains 'api' %}
+		document.getElementById('api').style.borderBottom = "2px solid #FF9900";
+	{% endif %}
+</script>
 {% if jekyll.environment == 'production' %}
 	<script>
 		var setBackgroundImage = function() {
