--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -155,12 +155,12 @@ $ amplify configure</code>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/web.png" />
                                             <p class="platform-title">Build for Web</p>
-                                            <a href="get_started_docs?platform=purejs" target="_blank"> <button class="btn">Get Started</button> </a>
+                                            <a href="get_started_docs?platform=purejs"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/ReactNat@1x.png" />
                                             <p class="platform-title">Build with React Native</p>
-                                            <a href="get_started_docs?platform=react-native" target="_blank"> <button class="btn">Get Started</button> </a>
+                                            <a href="get_started_docs?platform=react-native"> <button class="btn">Get Started</button> </a>
                                         </div>
                                     </div>
                             </div><!-- /.row -->
