--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -23,6 +23,22 @@
     display: block !important;
 }
 
+.content-filter {
+    float:none;
+    .filter-item {
+        float:left;
+        margin-right: 10px;
+    }
+    .btn {
+        height: 30px !important;
+        font-weight: normal;
+    }
+    .row {
+        margin-bottom:15px !important;
+        line-height: 38px;
+    }
+}
+
 .site-header {
 	position: fixed;
 	//width: 1442px;
@@ -542,8 +558,8 @@ a {
             width: 230px;
             padding-top: 17px;
         }
-	}
-
+    }
+    
 	.btn--github,
 	.btn--w-arrow-down {
 		@extend .btn--dark;
@@ -610,6 +626,22 @@ a {
     padding: 0 40px;
     height: 60px;
     text-transform: uppercase;
+}
+
+.btn--light {
+	color: $color-black;
+	background-color: white;
+
+	&:hover,
+	&:focus,
+	&:active {
+		color: $color-white;
+        background-color: orange;
+        border-color: orange;
+    }
+    border-style: solid;
+    border-width: 1px;
+    border-color: lightgray;
 }
 
 @media (max-width: 828px) {
