--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -1502,6 +1502,13 @@ li {
                     }
                 }
 
+                .dev-guide-by {
+                    color: gray;
+                    font-size: 13px;
+                    margin-top: -15px;
+                    margin-bottom: 10px;
+                }
+
                 .dev-guide-excerpt {
                     color: #828282;
                     font-family: "Amazon Ember", "Helvetica", sans-serif;
